--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="./lifetime"><h1>lifetime</h1></a>
     <a href="./multiverse.ai"><h1>multiverse.ai</h1></a>
     <a href="./proj_hidden-feathers"><h1>proj_hidden-feathers</h1></a>
+    <a href="./lifetime copy"><h1>lifetime copy</h1></a>
 
   </body>
 </html>
